<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/estimatedBillMenuGroup">
        <item
            android:id="@+id/estimatedBillMenuItem"
            android:title="@string/estimated_bill"
            app:showAsAction="ifRoom" />
    </group>

    <group android:id="@+id/cancellableOrdersMenuGroup">
        <item
            android:id="@+id/cancellableOrdersMenuItem"
            android:title="@string/orders"
            app:showAsAction="ifRoom" />
    </group>

    <group android:id="@+id/changeMergeTableMenuGroup">
        <item
            android:id="@+id/changeTableMenuItem"
            android:title="@string/change"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/mergeTableMenuItem"
            android:title="@string/merge"
            app:showAsAction="ifRoom" />
    </group>

    <item
        android:id="@+id/changePasswordMenuItem"
        android:title="@string/change_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/updateServiceChargeMenuItem"
        android:icon="@drawable/percent_black_24"
        android:title="@string/update_service_charge"
        app:showAsAction="never" />

    <item
        android:id="@+id/logoutMenuItem"
        android:icon="@drawable/logout_black_24"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>