<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="0dp"
        app:strokeColor="@color/lightGrey"
        app:strokeWidth="0.5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/srNO"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="0.5"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/sn" />

            <TextView
                android:id="@+id/item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="2.5"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/item" />

            <TextView
                android:id="@+id/qty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:paddingHorizontal="4dp"
                android:text="@string/qty" />

            <TextView
                android:id="@+id/rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/rate" />

            <TextView
                android:id="@+id/kot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/kot" />

            <TextView
                android:id="@+id/bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/bar" />

            <TextView
                android:id="@+id/coffee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/coffee_small" />

            <TextView
                android:id="@+id/sekuwa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/sekuwa_small" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>