<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tableName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dummy_table_name"
            android:textColor="@color/purple_500"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_circle" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="0dp"
            app:strokeColor="@color/grey"
            app:strokeWidth="0.5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginVertical="16dp">

                <TextView
                    android:id="@+id/srNO"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/sn" />

                <TextView
                    android:id="@+id/foodName"
                    android:layout_width="0dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/qty"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/qty"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="4dp" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1.5" />

                <TextView
                    android:id="@+id/totalPrice"
                    android:layout_width="0dp"
                    android:text="@string/total"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="0dp"
                    android:text="@string/isNew"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activeTableOrderRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="3"
        tools:listitem="@layout/table_order_list_item" />

</LinearLayout>